# deckgym-core

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  audit.py  audit_basic.py  database.json  flake.nix
.github/prompts/: implement-attack.prompt.md
.github/workflows/: ci.yml
benches/: card_lookup_benchmark.rs  play_benchmark.rs
example_decks/: arceusdialga.txt  blastoiseex.txt  fire.txt  hitmonlee.txt  incomplete-chari.txt  mewtwoex.txt  venusaur-exeggutor.txt  venusaur-exeggutornoex.txt  weezing-arbok.txt
src/: ability_ids.rs  attack_ids.rs  card_ids.rs  database.rs  deck.rs  game.rs  hooks.rs  lib.rs  main.rs  optimize.rs  simulate.rs  state.rs  test_helpers.rs  tool_ids.rs  types.rs
src/actions/: apply_abilities_action.rs  apply_action.rs  apply_action_helpers.rs  apply_attack_action.rs  apply_trainer_action.rs  mod.rs  mutations.rs  types.rs
src/hooks/: core.rs  counterattack.rs  mod.rs  retreat.rs
src/move_generation/: attacks.rs  mod.rs  move_generation_abilities.rs  move_generation_trainer.rs
src/players/: attach_attack_player.rs  end_turn_player.rs  expectiminimax_player.rs  human_player.rs  mcts_player.rs  mod.rs  random_player.rs  value_function_player.rs  weighted_random_player.rs
tests/: apply_actions_test.rs  deck_test.rs  game_api_test.rs
tests/common/: mod.rs
