[package]
name = "deckgym"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
lazy_static = "1.4"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.6"
colored = "2.2.0"
chrono = "0.4.39"
indexmap = "2.7.0"
num-format = "0.4.4"
humantime = "2.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "play_benchmark"
harness = false

[[bench]]
name = "card_lookup_benchmark"
harness = false
